--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <main class="container">
     <aside id="about" class="sidebar-left-top" >
-    <img src="einstein_sticks_his_tongue_1951.jpg" alt="Profile picture" class="profile-pic"/>
+    <img src="images/einstein_sticks_his_tongue_1951.jpg" alt="Profile picture" class="profile-pic"/>
     <p>I am Albert Einstein a theoretical physicist you may have heard of me! I am best known for my work on the theory of relativity and many other contrabutions to science. </p>
     <a href="https://en.wikipedia.org/wiki/Albert_Einstein" target="_blank">My whole life on paper</a>
     </aside>
@@ -45,13 +45,13 @@
 
       <p>Here are some of my favorite things before being transported to 2025</p>
      <ul>
-  <li> Playing the violin is a soothing exercise to help me relax. <img src="OIP.jpg" alt="Einstein playing the violin" class="Einstein-Violin"></li>
+  <li> Playing the violin is a soothing exercise to help me relax. <img src="images/OIP.jpg" alt="Einstein playing the violin" class="Einstein-Violin"></li>
 
-  <li> Reading philosophy and smoking my pipe is one of my favorite activities.<img src="reading.jpg" alt="Einstein reading with a pipe" class="Einstein-reading"></li>
+  <li> Reading philosophy and smoking my pipe is one of my favorite activities.<img src="images/reading.jpg" alt="Einstein reading with a pipe" class="Einstein-reading"></li>
 
   <li> Taking long walks in nature really helps me think.</li>
 
-  <li> Imagining and researching new physics ideas. <img src="R.jpg" alt="Einstein thinking" class="Einstein-thinking"> </li>
+  <li> Imagining and researching new physics ideas. <img src="images/R.jpg" alt="Einstein thinking" class="Einstein-thinking"> </li>
 </ul>
     </aside>
   </main>
@@ -66,3 +66,4 @@
 </body>
 
 </html>
+
